Add component examples

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-    <div id="app-container">
-
+    <div id="created-element">
+    </div>
+    <div id="impure-component">
+    </div>
+    <div id="pure-component">
+    </div>
+    <div id="functional-element">
     </div>
 </body>
 </html>
