--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <div id="created-element">
-    </div>
-    <div id="impure-component">
-    </div>
-    <div id="pure-component">
-    </div>
-    <div id="functional-element">
-    </div>
+    <div id="container"> </div>
 </body>
 </html>
